samples/bad/bad006.lat
//Assigment to undeclared variable
int main() {
        x = 14;
	return 0 ;
}
